<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bg"
    tools:context=".Activities.Auth.SignUpActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000"

        />

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sign_up_icon"
        android:src="@drawable/login_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/register_your_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_icon" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_name_edt"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_bg"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="#828282"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_email_edt"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_bg"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="#828282"
        app:layout_constraintTop_toBottomOf="@id/sign_up_name_edt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_phone_edt"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_bg"
        android:hint="@string/phone_number"
        android:inputType="phone|number"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="#828282"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email_edt" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_up_password_edt"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="#828282"
        app:layout_constraintTop_toBottomOf="@id/sign_up_phone_edt" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_splash"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#543A20"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_edt" />

    <ImageView
        android:id="@+id/auth_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_opt"
        android:src="@drawable/auth_opt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/fb_icon"
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/fb_icon"
        android:src="@drawable/fb_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fb_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_options"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/fb_icon"
        android:src="@drawable/fb_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fb_icon" />


    <ImageView
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:contentDescription="@string/google_icon"
        android:src="@drawable/google_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fb_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fb_icon" />

    <ImageView
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/twitter_icon"
        android:src="@drawable/twitter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fb_icon" />

    <TextView
        android:id="@+id/login_redirect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="39dp"
         />


</androidx.constraintlayout.widget.ConstraintLayout>